update READme and results directory

--- a/scripts/Galapagos_NEMO1_12.ipynb
+++ b/scripts/Galapagos_NEMO1_12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load data\n",
-    "namefile = 'galapagosparticles_americas_v2.nc'\n",
+    "namefile = '../data/galapagosparticles_americas_v2.nc'\n",
     "Traj = ReadTrajectories(namefile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,8 @@
     "plat = Traj['lat'][Traj['pvisited'],:]\n",
     "plon = Traj['lon'][Traj['pvisited'],:]\n",
     "map_extent = [-180,-70,-30,30]\n",
-    "PlotTrajectories(plon,plat,map_extent)\n"
+    "PlotTrajectories(plon,plat,map_extent)\n",
+    "plt.savefig('../results/figures/TrajAmerica')"
    ]
   },
   {
@@ -139,28 +140,6 @@
     "levels = [10**x for x in range(0, 9)]\n",
     "\n",
     "co = ax.contourf(xb, yb, H.T, levels=levels, norm=colors.LogNorm())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "plat = Traj['lat'][1:100,:]\n",
-    "plon = Traj['lon'][1:100,:]\n",
-    "map_extent = [-180,-70,-30,30]\n",
-    "PlotTrajectories(plon,plat,map_extent)\n",
-    "plt.savefig('TrajAmerica.pdf')"
    ]
   },
   {
